Compositor doesn't update anymore #65062

Closed
opened 2019-05-24 10:16:22 +02:00 by Sebastian Koenig · 5 comments

System Information
Operating system: Linux-4.4.0-146-generic-x86_64-with-debian-stretch-sid 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.56

Blender Version
Broken: version: 2.80 (sub 72), branch: master, commit date: 2019-05-24 05:48, hash: 7dd888c0cf
Worked: 2.80, 0ec6fa782b

Short description of error
The compositor does not update anymore when rendering more than 1 scene. Broken since this commit: b432209f63

Exact steps for others to reproduce the error
Open this file and render. Compositor isn't updating.
compositor_update.blend

**System Information** Operating system: Linux-4.4.0-146-generic-x86_64-with-debian-stretch-sid 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.56 **Blender Version** Broken: version: 2.80 (sub 72), branch: master, commit date: 2019-05-24 05:48, hash: `7dd888c0cf` Worked: 2.80, 0ec6fa782b63a05e52df2d013ffbf547b178ffd1 **Short description of error** The compositor does not update anymore when rendering more than 1 scene. Broken since this commit: b432209f63f873a025a7f4c3a79aa1d697dc9b98 **Exact steps for others to reproduce the error** Open this file and render. Compositor isn't updating. [compositor_update.blend](https://archive.blender.org/developer/F7064844/compositor_update.blend)
Author
Member

Added subscriber: @sebastian_k

Added subscriber: @sebastian_k
Sergey Sharybin was assigned by Sebastian Koenig 2019-05-24 10:16:56 +02:00
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Update happens as soon as you touch anything in the comp [noodle, socket, any value], but can confirm it is not updating straight after the render...

Update happens as soon as you touch anything in the comp [noodle, socket, any value], but can confirm it is not updating straight after the render...

This issue was referenced by fa299e669c

This issue was referenced by fa299e669ce3efa0105c24871d3f737e5112e6e3

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65062
No description provided.