Fix T65062: Compositor doesn't work when using different scene

Need to preserve all view layers, even for indirectly linked scenes
since they might be used by render layer nodes.